src/notification-tab/release/ReleaseNotification.module.css
:root {
  color-scheme: light dark;
  background-color: #ededed;

  @media (prefers-color-scheme: dark) {
    background-color: #242424;
  }
}

body {
  padding: 0;
  margin: 0;
  font-size: 16px;
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    'Open Sans',
    'Helvetica Neue',
    sans-serif;
}

button {
  all: unset;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 0.6em 1em;
  margin: 0;
  line-height: inherit;
  border: 1px solid #78787836;
  border-radius: 6px;
  letter-spacing: inherit;
  font-family: inherit;
  font-size: inherit;
  text-align: center;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  color: inherit;
  background-color: transparent;
  cursor: pointer;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;

  @media (prefers-color-scheme: dark) {
    border: 1px solid #ffffff36;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
  }

  &:hover,
  &:focus {
    box-shadow: none;
  }

  &:disabled {
    opacity: 0.5;
    pointer-events: none;
    user-select: none;
  }

  :is(svg) {
    height: 18px;
    width: 18px;
    margin-right: 12px;
  }
}

h1 {
  font-size: 1.5rem;
  font-weight: 200;
  margin: 0;
  text-transform: uppercase;
  color: #000;

  @media (prefers-color-scheme: dark) {
    color: #f3e5ab;
  }
}

a {
  color: #ea6fa3;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  padding: 2rem;
}

.section {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  padding: 0.8rem 0;
  text-align: center;
}

.italic {
  font-style: italic;
}

.buttons {
  padding: 8px 0;
}

.primaryAction {
  color: #fff;
  background-color: #b0436e;
  border-color: #b0436e;

  &:focus-visible {
    outline: 2px solid #b0436e;
    outline-offset: 2px;
  }
}

